tests/errors/comprehensive/E5010_continue_outside_loop.ez
/*
 * Error Test: E5010 - continue-outside-loop
 * Expected: "continue statement outside loop"
 */

do main() {
    continue  // continue outside of any loop
}
